day 2 css+js clock

--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
                     <td><a href="./1. JavaScriptDrumKit/index.html">JavaScript Drum Kit 🥁</a></td>
                 </tr>
                 <tr>
+                    <td>2</td>
+                    <td><a href="./2. JavaScriptClock/index.html">JavaScript Clock 🕞</a></td>
+                </tr>
+                <tr>
                     <td>...</td>
                     <td>...</td>
                 </tr>
