--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
                     <td><a href="./2. JavaScriptClock/index.html">JavaScript Clock 🕞</a></td>
                 </tr>
                 <tr>
+                    <td>2</td>
+                    <td><a href="./3. CSS Variables/index.html">JavaScript Clock 🕞</a></td>
+                </tr>
+                <tr>
                     <td>...</td>
                     <td>...</td>
                 </tr>
