--- a/1. JavaScriptDrumKit/index.html
+++ b/1. JavaScriptDrumKit/index.html
@@ -49,15 +49,15 @@
         </div>
     </div>
 
-    <audio data-key="65" src="sounds/clap.wav"></audio>
-    <audio data-key="83" src="sounds/hihat.wav"></audio>
-    <audio data-key="68" src="sounds/kick.wav"></audio>
-    <audio data-key="70" src="sounds/openhat.wav"></audio>
-    <audio data-key="71" src="sounds/boom.wav"></audio>
-    <audio data-key="72" src="sounds/ride.wav"></audio>
-    <audio data-key="74" src="sounds/snare.wav"></audio>
-    <audio data-key="75" src="sounds/tom.wav"></audio>
-    <audio data-key="76" src="sounds/tink.wav"></audio>
+    <audio data-key="65" preload="auto" src="sounds/clap.wav"></audio>
+    <audio data-key="83" preload="auto" src="sounds/hihat.wav"></audio>
+    <audio data-key="68" preload="auto" src="sounds/kick.wav"></audio>
+    <audio data-key="70" preload="auto" src="sounds/openhat.wav"></audio>
+    <audio data-key="71" preload="auto" src="sounds/boom.wav"></audio>
+    <audio data-key="72" preload="auto" src="sounds/ride.wav"></audio>
+    <audio data-key="74" preload="auto" src="sounds/snare.wav"></audio>
+    <audio data-key="75" preload="auto" src="sounds/tom.wav"></audio>
+    <audio data-key="76" preload="auto" src="sounds/tink.wav"></audio>
 
     <script>
         function playSound(e) {
@@ -65,7 +65,7 @@
             const key = document.querySelector(`div[data-key="${e.keyCode}"]`);
 
             if (!audio) return;
-
+            audio.pause();
             audio.currentTime = 0;
             audio.play();
 
