--- a/index.html
+++ b/index.html
@@ -30,8 +30,12 @@
                     <td><a href="./2. JavaScriptClock/index.html">JavaScript Clock 🕞</a></td>
                 </tr>
                 <tr>
-                    <td>2</td>
-                    <td><a href="./3. CSS Variables/index.html">JavaScript Clock 🕞</a></td>
+                    <td>3</td>
+                    <td><a href="./3. CSS Variables/index.html">CSS Variables</a></td>
+                </tr>
+                <tr>
+                    <td>4</td>
+                    <td><a href="./4. Array Cardio Day 1/index.html">Array Cardio Day 1💪</a></td>
                 </tr>
                 <tr>
                     <td>...</td>
