--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
                     <td><a href="./4. Array Cardio Day 1/index.html">Array Cardio Day 1💪</a></td>
                 </tr>
                 <tr>
+                    <td>5</td>
+                    <td><a href="./5. Flex Panels Image Gallery/index.html">Flex Panels Image Gallery 🍂</a></td>
+                </tr>
+                <tr>
                     <td>...</td>
                     <td>...</td>
                 </tr>
